--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Form</title>
 </head>
 <body>
-    <main class="main-container">
+    <!-- <main class="main-container">
       <form class="form-container">
         <label for="first-name" class="field active">
           <input id="first-name" type="text" />
@@ -36,7 +36,7 @@
           <ion-icon class="icon" name="lock-closed"></ion-icon>
         </label>
       </form>
-    </main>
+    </main> -->
     <script src="./main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
